src/main/java/org/example/jjava_main/_core/error/GlobalValidationHandler.java
package org.example.jjava_main._core.error;

public class GlobalValidationHandler {
}
